[package]
name = "lightshark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version= "1.10", features = ["attributes"] }
async-tungstenite = { version = "0.17", features = ["async-std-runtime", "async-native-tls"] }
clap = { version = "3.2", features = ["derive"] }
futures = "0.3"
log = "0.4"
simple_logger = "2.2"
anyhow = "1.0"
rmpv = "1.0"
